examples/errors/class_redeclaration.syntax
Program
  ProgramDeclaration
    ClassName: Main
  ClassDeclarations
    ClassDeclaration
      ClassName: Main
      ClassBody
        MemberDeclarations
          MemberDeclaration
            ConstructorDeclaration
              Body
                BodyDeclarations
                  BodyDeclaration
                    VariableDeclaration
                      CompoundExpression: Integer
                      VariableName: a
                  BodyDeclaration
                    Assignment
                      CompoundExpression: Integer
                        Arguments
                          Expressions
                            Primary: 10
                      VariableName: a
    ClassDeclaration
      ClassName: Main
      ClassBody
        MemberDeclarations
          MemberDeclaration
            ConstructorDeclaration
              Body
                BodyDeclarations
                  BodyDeclaration
                    VariableDeclaration
                      CompoundExpression: Integer
                      VariableName: a
                  BodyDeclaration
                    Assignment
                      CompoundExpression: Integer
                        Arguments
                          Expressions
                            Primary: 10
                      VariableName: a
